Aplicação de JavaScript no formulario de contato

--- a/contato.html
+++ b/contato.html
@@ -21,7 +21,7 @@
 			<div id="titulo">
 
 				<!-- Seu nome -->
-				<h1>Generation Brasil</h1>
+				<h1>Izabelly GS</h1>
 
 			</div>
 
@@ -137,9 +137,11 @@
 		</section>
 
 		<h3>
-			Feito com 🧡 por Izabelly Gutierres Silva - 2025
+			Feito com 💜 por Izabelly Gutierres Silva - 2025
 		</h3>
 
+		<!--linkando o arquivo script com o html-->
+		<script src="./assets/js/script.js"> </script>
 	</footer>
 </body>
 
