--- a/index.html
+++ b/index.html
@@ -57,21 +57,21 @@
                 <article id="sobre-texto">
 
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quo quasi cum deleniti. Cupiditate
-                        cumque sapiente nobis magnam unde repudiandae, distinctio dolore magni odio assumenda ut
-                        mollitia illo, saepe facilis vitae amet quae sed rerum ipsa? Rem repellat dicta minima ullam
-                        sequi? Molestias iste minus nobis tempore ea corporis ipsum est sed, deleniti optio dolorum
-                        mollitia soluta nisi eum aspernatur iusto possimus error saepe quisquam earum ipsam. Unde iusto
-                        illo impedit, ducimus nesciunt numquam odio et similique laboriosam consequuntur inventore
-                        consequatur distinctio labore dolores deserunt deleniti, maiores sunt tempora recusandae eaque
-                        eveniet neque. Necessitatibus repudiandae error aliquid natus atque, modi, debitis beatae
+                        👋 Olá! Seja bem-vindo ao meu espaço na web!
                     </p>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid a ut repellat. Quidem pariatur
-                        molestiae consectetur quam vitae dignissimos in aut modi, dolorum quo soluta ad voluptas ab
-                        quaerat iste tempore, esse voluptates est quod quas nesciunt! Recusandae architecto numquam
-                        obcaecati sapiente quidem placeat quaerat, est omnis error neque modi.
+                        Sou formada em Design/Multimídia e atualmente estou cursando Gestão da Tecnologia da Informação.
+                        Minha paixão pela tecnologia e criatividade me levou a explorar diferentes áreas, desde
+                        desenvolvimento Full Stack até design digital.
                     </p>
+                    <p>
+                        Nos meus momentos livres, sou completamente envolvida pelo mundo do entretenimento! 📚 Adoro ler
+                        livros, 🎶 ouvir música, 🎬 assistir a filmes e está com meus amigos e pessoas que amo!
+                    </p>
+                    <p>
+                        Aqui no meu blog, compartilho um pouco sobre minha jornada, experiências e interesses. Espero
+                        que você aproveite o conteúdo! 💜
+                   </p>
 
                 </article>
 
@@ -113,7 +113,7 @@
         </section>
 
         <h3>
-            Feito com 🧡 por Izabelly Gutierres Silva - 2025
+            Feito com 💜 por Izabelly Gutierres Silva - 2025
         </h3>
 
     </footer>
